2004-04-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/my-lily-parser.cc (ly:parser-add-book-and-score): New function.

	* lily/parser.yy (toplevel_expression): Use it.

	* lily/include/my-lily-parser.hh: Smobbify.

	* lily/my-lily-parser.cc (parse_string): New method.
	
	* lily/my-lily-parser.cc (ly:parse-string): New function.

	* Documentation/user/lilypond.tely: Add comment and workaround for
	gs-8.01 crash.  Fixes make web.

	Simplification of toplevel music.
	
	* lily/lexer.ll, lily/parser.yy:

	* In LYRICS mode, return LYRICS_STRING.  This fixes one
	shift/reduce problem.

	* Use NOTES mode at start of maininput.

	* Grok toplevel composite music expression, put in score and book.

	* Grok \relative COMPOSITE_MUSIC, make relative on middleC.

	* \newlyrics is a shortcut for \context Lyrics \lyricsto "" \lyrics

	* input/simple.ly: New file.
	
	* input/simple-song.ly: Idem.

2004-04-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/parser.yy: rename NEWADDLYRICS to LYRICSTO. Thanks to Erik
	Sandberg.

2004-04-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/font.scm (add-cmr-fonts): Narrow bold is ecrb.

2004-04-17  Heikki Junes <hjunes@cc.hut.fi>

	* input/regression/accidental-octave.ly: doc automatic showing
	of note names.

2004-04-16  Heikki Junes <janneke@gnu.org>

	* po/fi.po: do "make po && make -C po po-update" at top-level,
	then "cp po/out/fi.po po/fi.po" and update fields.

	* po/fi.po: remove all designations of `fuzzy'; shows those elements.

2004-04-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/introduction.itely (About this manual): Fix
	templates and regression urls (backportme).

2004-04-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/engraver-init.ly (Score:graceSettings): Increase
	beamed-lengths, especially for 32nd notes.

	* Documentation/user/notation.itely (Grace notes): Correct the
	syntax for add-grace-property example.

2004-04-13  Jan Nieuwenhuizen  <janneke@gnu.org>
