@@ -1,5 +1,7 @@
 2004-04-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/lily.scm (toplevel-expression): New define.
+
 	* lily/my-lily-parser.cc (ly:parser-add-book-and-score): New function.
 
 	* lily/parser.yy (toplevel_expression): Use it.
